added to html, css, and js files to convert to web version

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     height: 25vw;
     margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -34,3 +34,6 @@ body {
     justify-content: center;
 }
 
+.display {
+    text-align: center;
+}
