--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@ body {
 }
 
 .container {
-    max-width: 50vw;
+    /* max-width: 50vw; */
+    width: 100%
     height: 25vw;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -32,8 +33,26 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: .12em;
 }
 
 .display {
     text-align: center;
+}
+
+@media only screen
+and (max-device-width: 480px) {
+/* Styles */
+    .choice {
+        font-size: 3em;
+    }
+}
+
+@media only screen
+and (min-device-width: 481px)
+and (max-device-width: 1024px) {
+/* Styles */
+    .choice {
+        font-size: 4em;
+    }
 }
