--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 .container {
     /* max-width: 50vw; */
-    width: 100%
+    width: 100%;
     height: 25vw;
     margin: 0 auto;
     display: flex;
