--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    margin: .25em auto;
     display: flex;
     justify-content: center;
     align-items: center;
